<resources>
    <string name="app_name">指尖资讯</string>

    <string name="click_login">点击头像登录</string>
    <string name="hint_name">用户名/Email/手机号</string>
    <string name="hint_password">密码</string>

    <string name="user_login">用户登录</string>
    <string name="login">登录</string>
    <string name="error_login_empty">用户名/Email/手机号不能为空</string>
    <string name="error_pswd_empty">密码不能为空</string>

    <string name="action_settings">Settings</string>
    <string name="transition__img">切换动画</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="news">新闻资讯</string>
    <string name="image">图片咯</string>
    <string name="joke">开心一下</string>
    <string name="music">音乐鉴赏</string>
    <string name="chat">聊天机器人</string>
    <string name="wx">微信精选</string>
    <string name="edit">编辑</string>
    <string name="share">分享</string>
    <string name="loading">正在加载</string>
    <string name="none_net">网络未连接，点击重试</string>
    <string name="none_net_show_action">网络未连接</string>
    <string name="set">设置</string>
    <string name="action_search">search</string>
    <string name="again_press_exit">再按一次退出程序</string>
</resources>
