<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_drawer_news"
            android:checked="true"
            android:icon="@drawable/icon_news"
            android:orderInCategory="1"
            android:title="@string/news"/>
        <item
            android:id="@+id/menu_item_drawer_joke"
            android:icon="@drawable/icon_smile"
            android:orderInCategory="2"
            android:title="@string/joke"/>

        <item
            android:id="@+id/menu_item_drawer_music"
            android:icon="@drawable/icon_music"
            android:orderInCategory="4"
            android:title="@string/music"/>

        <item
            android:id="@+id/menu_item_drawer_chat"
            android:icon="@drawable/icon_chat"
            android:orderInCategory="3"
            android:title="@string/chat"/>
    </group>
    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="none"
        android:orderInCategory="6">
        <item
            android:id="@+id/nav_theme"
            android:title="主题风格"/>
        <item
            android:id="@+id/nav_night"
            android:title="夜间模式"/>
        <item
            android:id="@+id/nav_setting"
            android:title="设置"/>
        <item
            android:id="@+id/nav_suggestion"
            android:title="意见反馈"/>
        <item
            android:id="@+id/nav_about"
            android:title="关于"/>

    </group>
</menu>