<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group  android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_drawer_news"
            android:orderInCategory="1"
            android:checked="true"
            android:icon="@drawable/icon_news"
            android:title="@string/news"/>
        <item
            android:orderInCategory="2"
            android:id="@+id/menu_item_drawer_image"
            android:icon="@drawable/icon_smile"
            android:title="@string/joke"/>
        <item
            android:orderInCategory="3"
            android:id="@+id/menu_item_drawer_music"
            android:icon="@drawable/icon_music"
            android:title="@string/music"/>
        <item
            android:orderInCategory="4"
            android:id="@+id/menu_item_drawer_chat"
            android:icon="@drawable/icon_smile"
            android:title="@string/video"/>

    </group>

</menu>